src/app/r-ucla/question.co.scss
@import '../../variables.scss';

div.buttons {  // The box with the buttons.
  text-align: center;
  margin-top: calc(20px + 1%);
  // Prevents the buttons from bouncing down and up while their size is being decreased by the animated `margin-right`.
  white-space: nowrap}

div.buttons.primal {
  // With `nowrap` and before `adjustSize` the box might be wider than the window.
  // It is therefore important not to display the box prematurely, in order not to trigger viewport rescaling.
  display: none}

button {  // The answer buttons.
  // We need the buttons to have the same size, otherwise the spacing is uneven when we rotate them.
  // 110px is a bit larger than the usual 103px of the largest button.
  width: 110px}

button:nth-of-type(1), button:nth-of-type(2), button:nth-of-type(3) {
  // A bit of space between the buttons.
  margin-right: 3%}

// darken: http://sass-lang.com/documentation/Sass/Script/Functions.html#darken-instance_method
// We can also use the `brightness` filter, cf. https://stackoverflow.com/a/25942447/257568.
button:nth-of-type(1) {background-color: darken($primary-color, 15%)}
button:nth-of-type(2) {background-color: darken($primary-color, 10%)}
button:nth-of-type(3) {background-color: darken($primary-color, 5%)}

// The "small" class is triggered when the screen is too narrow to display the row of horisontal buttons.

div.buttons.small {
  // Reserves some space for the sharp angles of the rotated buttons.
  margin-top: 23px}

button.small {
  // A bit leaner than the default 36px.
  line-height: 30px}

